--- a/iframe.html
+++ b/iframe.html
@@ -18,19 +18,19 @@
 		<!-- Aquesta linia script s'ha de posar abans del iframe -->
 		
 		<!-- Actividad fisica -->
-		<iframe src="http://int.erigin.com/animacions-isglobal/animacions/actividad-fisica.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;" onload="resizeIframe(this)"></iframe>
+		<iframe src="https://comunicacio.github.io/animacions/animacions/actividad-fisica.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;" onload="resizeIframe(this)"></iframe>
 		<!-- Actividad fisica -->
 
 		<hr>
 		
 		<!-- Aire ciudades -->
-		<iframe src="http://int.erigin.com/animacions-isglobal/animacions/aire-ciudades.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;" onload="resizeIframe(this)"></iframe>
+		<iframe src="https://comunicacio.github.io/animacions/animacions/aire-ciudades.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;" onload="resizeIframe(this)"></iframe>
 		<!-- Aire ciudades -->
 
 		<hr>
 
 		<!-- Ciudades ruidosas -->
-		<iframe src="http://int.erigin.com/animacions-isglobal/animacions/ciudades-ruidosas.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;" onload="resizeIframe(this)"></iframe>
+		<iframe src="https://comunicacio.github.io/animacions/animacions/ciudades-ruidosas.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;" onload="resizeIframe(this)"></iframe>
 		<!-- Ciudades ruidosas -->
 	</body>
 </html>
