--- a/animacions/soluciones-ca-contaminacion.html
+++ b/animacions/soluciones-ca-contaminacion.html
@@ -211,9 +211,8 @@
 			// Get height of document
 			function getDocHeight(doc) {
 				doc = doc || document;
-				var body = doc.body, html = doc.documentElement;
-				var height = Math.max( body.scrollHeight, body.offsetHeight, 
-					html.clientHeight, html.scrollHeight, html.offsetHeight );
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
 				return height;
 			}
 
@@ -227,8 +226,10 @@
 			// assign onload handler 
 			if ( window.addEventListener ) {
 				window.addEventListener('load', sendDocHeightMsg, false);
+				window.addEventListener('click', sendDocHeightMsg, false);
 			} else if ( window.attachEvent ) { // ie8
 				window.attachEvent('onload', sendDocHeightMsg);
+				window.attachEvent('onclick', sendDocHeightMsg);
 			}
 		</script>
 </body>
