--- a/animacions/soluciones-en.html
+++ b/animacions/soluciones-en.html
@@ -316,9 +316,8 @@ information on noise pollution by means of <strong>noise maps</strong> (in Barce
 			// Get height of document
 			function getDocHeight(doc) {
 				doc = doc || document;
-				var body = doc.body, html = doc.documentElement;
-				var height = Math.max( body.scrollHeight, body.offsetHeight, 
-					html.clientHeight, html.scrollHeight, html.offsetHeight );
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
 				return height;
 			}
 
@@ -332,8 +331,10 @@ information on noise pollution by means of <strong>noise maps</strong> (in Barce
 			// assign onload handler 
 			if ( window.addEventListener ) {
 				window.addEventListener('load', sendDocHeightMsg, false);
+				window.addEventListener('click', sendDocHeightMsg, false);
 			} else if ( window.attachEvent ) { // ie8
 				window.attachEvent('onload', sendDocHeightMsg);
+				window.attachEvent('onclick', sendDocHeightMsg);
 			}
 		</script>
 </body>
