--- a/animacions/soluciones-ca.html
+++ b/animacions/soluciones-ca.html
@@ -312,9 +312,8 @@
 			// Get height of document
 			function getDocHeight(doc) {
 				doc = doc || document;
-				var body = doc.body, html = doc.documentElement;
-				var height = Math.max( body.scrollHeight, body.offsetHeight, 
-					html.clientHeight, html.scrollHeight, html.offsetHeight );
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
 				return height;
 			}
 
