--- a/animacions/menu-ca.html
+++ b/animacions/menu-ca.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="overflow: hidden">
-  <div class="graphic-container">
+  <div id="menu" class="graphic-container">
     <svg class="screen-desktop" version="1.1" class="index" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
     viewBox="0 0 973.4 152.1" style="enable-background:new 0 0 973.4 152.1;" xml:space="preserve">
       <style type="text/css">
@@ -2159,5 +2159,30 @@
     <!-- Contaminacio -->
   </svg>
 </div>
+		<script>
+			// Get height of document
+			function getDocHeight(doc) {
+				doc = doc || document;
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
+				return height;
+			}
+
+			// send docHeight onload
+			function sendDocHeightMsg(e) {
+				var ht = getDocHeight();
+				var id = 'menu'; //iframe id
+				parent.postMessage( JSON.stringify( {'docHeight': ht, 'id':id} ), '*' );
+			}
+
+			// assign onload handler 
+			if ( window.addEventListener ) {
+				window.addEventListener('load', sendDocHeightMsg, false);
+				//window.addEventListener('click', sendDocHeightMsg, false);
+			} else if ( window.attachEvent ) { // ie8
+				window.attachEvent('onload', sendDocHeightMsg);
+				//window.attachEvent('onclick', sendDocHeightMsg);
+			}
+		</script>
 </body>
 </html>
