Communication (aire-ciudades, contaminacion-aire, cuerpo-humano)

--- a/animacions/aire-ciudades-en.html
+++ b/animacions/aire-ciudades-en.html
@@ -2517,10 +2517,10 @@
 			// assign onload handler 
 			if ( window.addEventListener ) {
 				window.addEventListener('load', sendDocHeightMsg, false);
-				window.addEventListener('click', sendDocHeightMsg, false);
+				//window.addEventListener('click', sendDocHeightMsg, false);
 			} else if ( window.attachEvent ) { // ie8
 				window.attachEvent('onload', sendDocHeightMsg);
-				window.attachEvent('onclick', sendDocHeightMsg);
+				//window.attachEvent('onclick', sendDocHeightMsg);
 			}
 		</script>
 	</body>
