--- a/animacions/cuerpo-humano-es.html
+++ b/animacions/cuerpo-humano-es.html
@@ -886,5 +886,30 @@
       </div>
     </div>
   </div>
+		<script>
+			// Get height of document
+			function getDocHeight(doc) {
+				doc = doc || document;
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
+				return height;
+			}
+
+			// send docHeight onload
+			function sendDocHeightMsg(e) {
+				var ht = getDocHeight();
+				var id = 'CosHuma'; //iframe id
+				parent.postMessage( JSON.stringify( {'docHeight': ht, 'id':id} ), '*' );
+			}
+
+			// assign onload handler 
+			if ( window.addEventListener ) {
+				window.addEventListener('load', sendDocHeightMsg, false);
+				//window.addEventListener('click', sendDocHeightMsg, false);
+			} else if ( window.attachEvent ) { // ie8
+				window.attachEvent('onload', sendDocHeightMsg);
+				//window.attachEvent('onclick', sendDocHeightMsg);
+			}
+		</script>
 </body>
 </html>
