--- a/iframe.html
+++ b/iframe.html
@@ -53,11 +53,11 @@
 		
 		<!-- Contaminación aire -->
 		<!-- ca -->
-		<iframe id="" src="https://comunicacio.github.io/animacions/animacions/contaminacion-aire-ca.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
+		<iframe id="ContaminacionAire" src="https://comunicacio.github.io/animacions/animacions/contaminacion-aire-ca.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
 		<!-- es -->
-		<iframe id="" src="https://comunicacio.github.io/animacions/animacions/contaminacion-aire-es.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
+		<iframe id="ContaminacionAire" src="https://comunicacio.github.io/animacions/animacions/contaminacion-aire-es.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
 		<!-- en -->
-		<iframe id="" src="https://comunicacio.github.io/animacions/animacions/contaminacion-aire-en.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
+		<iframe id="ContaminacionAire" src="https://comunicacio.github.io/animacions/animacions/contaminacion-aire-en.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
 		<!-- Contaminación aire -->
 
 		<hr>
@@ -116,11 +116,11 @@
 		
 		<!-- Cuerpo humano -->
 		<!-- ca -->
-		<iframe id="" src="https://comunicacio.github.io/animacions/animacions/cuerpo-humano-ca.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
+		<iframe id="CosHuma" src="https://comunicacio.github.io/animacions/animacions/cuerpo-humano-ca.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
 		<!-- es -->
-		<iframe id="" src="https://comunicacio.github.io/animacions/animacions/cuerpo-humano-es.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
+		<iframe id="CosHuma" src="https://comunicacio.github.io/animacions/animacions/cuerpo-humano-es.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
 		<!-- en -->
-		<iframe id="" src="https://comunicacio.github.io/animacions/animacions/cuerpo-humano-en.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
+		<iframe id="CosHuma" src="https://comunicacio.github.io/animacions/animacions/cuerpo-humano-en.html" frameborder="0" style="width: 100%; height: -webkit-fill-available; height: -moz-available; -moz-fit-content; overflow: hidden!important;"></iframe>
 		<!-- Cuerpo humano -->
 
 		<hr>
