--- a/animacions/contaminacion-aire-ca.html
+++ b/animacions/contaminacion-aire-ca.html
@@ -1049,6 +1049,30 @@ y="0px" viewBox="0 -232.1 1200 1464.1" style="enable-background:new 0 -232.1 120
 <footer>
   <p>El transport motoritzat (cotxes, camions, motos, etc.) és la principal font de contaminació de l'aire a les ciutats. A més de la combustió, el desgast de les rodes i els frens també contribueixen a augmentar el nivell de partícules.</p>
 </footer>
+		<script>
+			// Get height of document
+			function getDocHeight(doc) {
+				doc = doc || document;
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
+				return height;
+			}
 
+			// send docHeight onload
+			function sendDocHeightMsg(e) {
+				var ht = getDocHeight();
+				var id = 'ContaminacionAire'; //iframe id
+				parent.postMessage( JSON.stringify( {'docHeight': ht, 'id':id} ), '*' );
+			}
+
+			// assign onload handler 
+			if ( window.addEventListener ) {
+				window.addEventListener('load', sendDocHeightMsg, false);
+				//window.addEventListener('click', sendDocHeightMsg, false);
+			} else if ( window.attachEvent ) { // ie8
+				window.attachEvent('onload', sendDocHeightMsg);
+				//window.attachEvent('onclick', sendDocHeightMsg);
+			}
+		</script>
 </body>
 </html>
