--- a/animacions/contaminacion-aire-en.html
+++ b/animacions/contaminacion-aire-en.html
@@ -1018,6 +1018,30 @@
 <footer>
   <p>Motor vehicles (cars, trucks, motor bikes, etc.) are the main source of urban air pollution. In addition to combustion, the wear and tear of wheels and brakes also leads to increased concentrations of particles.</p>
 </footer>
+		<script>
+			// Get height of document
+			function getDocHeight(doc) {
+				doc = doc || document;
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
+				return height;
+			}
 
+			// send docHeight onload
+			function sendDocHeightMsg(e) {
+				var ht = getDocHeight();
+				var id = 'ContaminacionAire'; //iframe id
+				parent.postMessage( JSON.stringify( {'docHeight': ht, 'id':id} ), '*' );
+			}
+
+			// assign onload handler 
+			if ( window.addEventListener ) {
+				window.addEventListener('load', sendDocHeightMsg, false);
+				//window.addEventListener('click', sendDocHeightMsg, false);
+			} else if ( window.attachEvent ) { // ie8
+				window.attachEvent('onload', sendDocHeightMsg);
+				//window.attachEvent('onclick', sendDocHeightMsg);
+			}
+		</script>
 </body>
 </html>
