--- a/animacions/contaminacion-aire-es.html
+++ b/animacions/contaminacion-aire-es.html
@@ -1000,6 +1000,30 @@
 <footer>
   <p>El transporte motorizado (coches, camiones, motos, etc.) es la principal fuente de contaminación del aire en las ciudades. Además de la combustión, el desgaste de las ruedas y los frenos también contribuyen a aumentar el nivel de partículas.</p>
 </footer>
+		<script>
+			// Get height of document
+			function getDocHeight(doc) {
+				doc = doc || document;
+				var body = doc.body;
+				var height = Math.max( body.scrollHeight, body.offsetHeight);
+				return height;
+			}
 
+			// send docHeight onload
+			function sendDocHeightMsg(e) {
+				var ht = getDocHeight();
+				var id = 'ContaminacionAire'; //iframe id
+				parent.postMessage( JSON.stringify( {'docHeight': ht, 'id':id} ), '*' );
+			}
+
+			// assign onload handler 
+			if ( window.addEventListener ) {
+				window.addEventListener('load', sendDocHeightMsg, false);
+				//window.addEventListener('click', sendDocHeightMsg, false);
+			} else if ( window.attachEvent ) { // ie8
+				window.attachEvent('onload', sendDocHeightMsg);
+				//window.attachEvent('onclick', sendDocHeightMsg);
+			}
+		</script>
 </body>
 </html>
