Links (soluciones-contaminacion)

--- a/animacions/soluciones-ca.html
+++ b/animacions/soluciones-ca.html
@@ -202,7 +202,7 @@
 								<li><strong>El transport públic com a columna vertebral</strong>. Millorar la xarxa de transport públic i fomentar el seu ús redueix considerablement la contaminació atmosfèrica en disminuir l'ús de vehicles privats i les seves emissions.</li>
 							</ul>
 						</p>
-						<p><strong>Pots consultar <a href="#">les solucions integrals que proposa l'OMS</a> i les que estan impulsant ajuntaments com el de <a href="#">Madrid</a> o <a href="#">Barcelona</a></strong></p>
+						<p><strong>Pots consultar <a href="http://breathelife2030.org/soluciones/soluciones-integrales-para-ciudades/?lang=es" target="_blank">les solucions integrals que proposa l'OMS</a> i les que estan impulsant ajuntaments com el de <a href="https://diario.madrid.es/aire/las-30-medidas/" target="_blank">Madrid</a> o <a href="https://ajuntament.barcelona.cat/qualitataire/" target="_blank">Barcelona</a></strong></p>
 					</div>
 				</div>
 			</div>
