--- a/animacions/soluciones-en-contaminacion.html
+++ b/animacions/soluciones-en-contaminacion.html
@@ -203,7 +203,7 @@
 								<li><strong>Making public transport the backbone</strong>. Improving the public transport system and promoting its use greatly reduces air pollution by decreasing private vehicle use and lowering emissions.</li>
 							</ul>
 						</p>
-						<p><strong>You can take a look at <a href="#">the comprehensive solutions proposed by the WHO</a> and at the measures being implemented by cities like <a href="#">Madrid</a> and <a href="#">Barcelona</a></strong></p>
+						<p><strong>You can take a look at <a href="http://breathelife2030.org/solutions/citywide-solutions/" target="_blank">the comprehensive solutions proposed by the WHO</a> and at the measures being implemented by cities like <a href="https://diario.madrid.es/aire/las-30-medidas/" target="_blank">Madrid</a> and <a href="https://ajuntament.barcelona.cat/qualitataire/en/" target="_blank">Barcelona</a></strong></p>
 					</div>
 				</div>
 			</div>
