--- a/animacions/soluciones-es.html
+++ b/animacions/soluciones-es.html
@@ -202,7 +202,7 @@
 								<li><strong>El transporte público como columna vertebral</strong>. Mejorar la red de transporte público y fomentar su uso reduce considerablemente la contaminación atmosférica al disminuir el uso de vehículos privados y sus emisiones.</li>
 							</ul>
 						</p>
-						<p><strong>Puedes consultar <a href="#">las soluciones integrales que propone la OMS</a> y las que están impulsando ayuntamientos como el de <a href="#">Madrid</a> o <a href="#">Barcelona</a></strong></p>
+						<p><strong>Puedes consultar <a href="http://breathelife2030.org/soluciones/soluciones-integrales-para-ciudades/?lang=es" target="_blank">las soluciones integrales que propone la OMS</a> y las que están impulsando ayuntamientos como el de <a href="https://diario.madrid.es/aire/las-30-medidas/" target="_blank">Madrid</a> o <a href="https://ajuntament.barcelona.cat/qualitataire/es/" target="_blank">Barcelona</a></strong></p>
 					</div>
 				</div>
 			</div>
